--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,36 @@
 tmp/*
-[Cc]onfig/core.php
-[Cc]onfig/database.php
+[Cc]onfig/*
 app/tmp/*
-app/[Cc]onfig/core.php
-app/[Cc]onfig/database.php
+app/[Cc]onfig/*
 !empty
+
+app/img/fotos/*
+app/Vendor/*
+app/webroot/.sass-cache/*
+*.htaccess*
+.project
+
+# User specific & automatically generated files #
+#################################################
+/app/tmp
+/lib/Cake/Console/Templates/skel/tmp/
+/plugins
+/vendors
+/build
+/dist
+/node_modules/
+/tags
+/wiki
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+wiki/Campos de formularios.doc
+wiki/Campos formulario de carga de videos y alta de usuarios.doc
